Bug 1704551 - Make nsMappedAttributes more similar to AttrArray. r=smaug

I need to use these from Rust to insert mapped attribute names in the
bloom filter, and this would save me handrolling even more bindings :)

Differential Revision: https://phabricator.services.mozilla.com/D111731